k8s/redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: redis-cluster-ip-service
spec:
    type: ClusterIP
    selector: #what set of pods it must provide access to? it should provide access to multi-service pod.
        component: redis #in server-deployment we have label server so, we use that for access
    ports:
        - port: 6379 #The port property is going to be how other pods or other objects inside of our cluster are going toaccess the pod that we are kind of 
          targetPort: 6379
