k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    annotations: #additional configuration option which gives higher level config of ingress object that is created
      kubernetes.io/ingress.class: nginx #we want to create ingress controller based on nginx
      nginx.ingress.kubernetes.io/rewrite-target: / #how actual copy of nginx behaves.
spec:
    rules:
        - http:
            paths:
                #there are 2 types of traffic / or /api.
                - path: /
                  backend:
                    serviceName: client-cluster-ip-service
                    servicePort: 3000
                - path: /api/
                  backend:
                    serviceName: server-cluster-ip-service
                    servicePort: 5000
